<resources>
    <string name="app_name">ChatMe</string>

    <string name="signUp_heading">Sign up with your mobile number</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="terms">Terms and Conditions</string>
    <string name="show_password">Show password</string>
    <string name="sign_up">Continue</string>
    <string name="sign_in">Sign-In</string>

    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
</resources>